tests/invalid_inputs/sema/sizeof_void_type.cpp

void f() {
	sizeof(void);	// error
}
